--- a/XGBoost.ipynb
+++ b/XGBoost.ipynb
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -148,8 +148,47 @@
      "text": [
       "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 4 concurrent workers.\n",
       "[Parallel(n_jobs=-1)]: Done  42 tasks      | elapsed:  1.9min\n",
-      "[Parallel(n_jobs=-1)]: Done 192 tasks      | elapsed: 12.0min\n"
+      "[Parallel(n_jobs=-1)]: Done 192 tasks      | elapsed: 12.0min\n",
+      "[Parallel(n_jobs=-1)]: Done 442 tasks      | elapsed: 33.3min\n",
+      "[Parallel(n_jobs=-1)]: Done 720 out of 720 | elapsed: 56.0min finished\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[22:12:14] WARNING: C:/Users/Administrator/workspace/xgboost-win64_release_1.3.0/src/learner.cc:1061: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'binary:logistic' was changed from 'error' to 'logloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=5,\n",
+       "             estimator=XGBClassifier(base_score=None, booster=None,\n",
+       "                                     colsample_bylevel=None,\n",
+       "                                     colsample_bynode=None,\n",
+       "                                     colsample_bytree=None, gamma=None,\n",
+       "                                     gpu_id=None, importance_type='gain',\n",
+       "                                     interaction_constraints=None,\n",
+       "                                     learning_rate=0.1, max_delta_step=None,\n",
+       "                                     max_depth=None, min_child_weight=None,\n",
+       "                                     missing=nan, monotone_constraints=None,\n",
+       "                                     n_estimators=250, n_jobs=None,\n",
+       "                                     num_parallel_tree=None, random_state=0,\n",
+       "                                     reg_alpha=None, reg_lambda=None,\n",
+       "                                     scale_pos_weight=None, subsample=None,\n",
+       "                                     tree_method=None, validate_parameters=None,\n",
+       "                                     verbosity=None),\n",
+       "             n_jobs=-1,\n",
+       "             param_grid={'colsample_bytree': [0.8, 0.9],\n",
+       "                         'gamma': [0.1, 0.2, 0.3], 'max_depth': range(3, 10, 2),\n",
+       "                         'reg_alpha': [0.01, 0.1, 1], 'subsample': [0.8, 0.9]},\n",
+       "             scoring='accuracy', verbose=1)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
